--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
+# =========================
+# Node & Dependency Folders
+# =========================
+node_modules/
+.pnpm-store/
+
+# =========================
+# Build Output
+# =========================
+dist/
+dist-ssr/
+out/
+
+# =========================
 # Logs
+# =========================
 logs
 *.log
 npm-debug.log*
@@ -7,18 +22,49 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# =========================
+# Environment Files (Sensitive)
+# =========================
+.env
+.env.*
+!.env.example
 
-# Editor directories and files
+# =========================
+# Local Config Files
+# =========================
+*.local
+firebase-debug.log
+firestore-debug.log
+storage-debug.log
+
+# =========================
+# Editor Directories & Files
+# =========================
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# =========================
+# System Files
+# =========================
+Thumbs.db
+ehthumbs.db
+
+# =========================
+# Test Coverage
+# =========================
+coverage/
+*.lcov
+
+# =========================
+# Misc
+# =========================
+*.pid
+*.seed
+*.tgz
